--- a/data/blog/20230618-i-got-covid.mdx
+++ b/data/blog/20230618-i-got-covid.mdx
@@ -3,7 +3,7 @@ title: '打五劑依然確診，疫苗是否沒用？'
 date: '2023-06-18'
 tags: ['life']
 summary:  我打五劑依然確診 Covid-19，疫苗是否沒用？
-images: ['https://img.kaixsean.com/2023/got-covid.jpeg']
+images: ['https://img.kaixsean.com/2023/vaccine.jpg']
 ---
 
 ![I got Covid](https://storage.googleapis.com/img.kaixsean.com/2023/got-covid.jpeg)
